[package]
name = "alar"
version = "1.0.7"
authors = ["malachma <malachma@microsoft.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys-mount = "3.*"
fs_extra = "1.3.0"
clap = { version = "4.*", features = ["cargo", "derive"] }
serde_json = "1.0.145"
serde = { version = "1.0.228" }
anyhow = "1.0.*"
env_logger = "0.11.*"
log = "0.4.*"
simple-base64 = "0.*"
reqwest = { version = "0.*", features = [ "json", "charset", "http2", "system-proxy", "rustls-tls-webpki-roots", "blocking"], default-features = false }
chrono = "0.4.42"
