[package]
name = "alar"
version = "1.4.1"
authors = ["malachma <malachma@microsoft.com>", "pagienge <pagienge@microsoft.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys-mount = "3.*"
fs_extra = "1.3.0"
clap = { version = "4.*", features = ["cargo", "derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.*"
anyhow = "1.0.*"
env_logger = "0.11.*"
log = "0.4.*"
simple-base64 = "0.*"
reqwest = { version = "0.13.2", features = [ "json", "charset", "http2", "system-proxy", "rustls", "blocking"], default-features = false }
chrono = { version = "0.4.44", default-features = false, features = ["alloc", "std", "clock", "now"]}
regex = "1.12.*"
glob = "0.3.*"

